--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-locals.zsh
-log/.zsh_history
-projects.zsh
-custom
+# custom files
+custom/
 !custom/plugins/example
 !custom/example.zsh
-*.swp
-!custom/example.zshcache
+
+# temp files directories
 cache/
-!cache/.gitkeep
 log/
-!log/.gitkeep
